--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
   "author": "Lambda School",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "knex": "^0.14.2",
+    "sqlite3": "^3.1.13"
   }
 }
