--- a/package.json
+++ b/package.json
@@ -9,5 +9,17 @@
   "author": "Lambda School",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "faker": "^4.1.0",
+    "knex": "^0.14.3",
+    "mocha": "^5.0.0",
+    "mysql": "^2.15.0",
+    "nodemon": "^1.14.12",
+    "sinon": "^4.3.0",
+    "sinon-chai": "^2.14.0",
+    "sqlite3": "^3.1.13"
   }
 }
