--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "author": "Lambda School",
   "license": "ISC",
   "dependencies": {
-    "knex": "^0.14.4"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "knex": "^0.14.4",
+    "mysql": "^2.15.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.1"
   }
 }
