--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "knex": "^0.14.2",
+    "knex": "^0.14.4",
+    "mysql": "^2.15.0",
     "sqlite3": "^3.1.13"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.1"
   }
 }
