--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "relationapimini",
   "version": "1.0.0",
   "description": "RDBMS API Mini Sprint",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon index.js"
   },
   "author": "Lambda School",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.3"
   }
 }
