--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "relationapimini",
-  "version": "1.0.0",
-  "description": "RDBMS API Mini Sprint",
+  "name": "y",
+  "version": "y",
+  "description": "idk",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
   },
-  "author": "Lambda School",
-  "license": "ISC",
+  "author": "Ari",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "knex": "^0.15.2",
+    "sqlite3": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
-  }
+  },
+  "repository": "-y",
+  "private": false
 }
