--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Lambda School",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "knex": "^0.15.2",
+    "sqlite3": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
-  }
+  },
+  "repository": "https://github.com/Michael-Real/RDBMS-API-Mini.git"
 }
