--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "helmet": "^3.13.0"
+    "helmet": "^3.13.0",
+    "knex": "^0.15.2",
+    "morgan": "^1.9.0",
+    "sqlite3": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wtkwon/db-zoos.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/wtkwon/db-zoos/issues"
+  },
+  "homepage": "https://github.com/wtkwon/db-zoos#readme"
 }
