--- a/package.json
+++ b/package.json
@@ -4,15 +4,25 @@
   "description": "RDBMS API Mini Sprint",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon"
   },
   "author": "Lambda School",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "helmet": "^3.13.0"
+    "helmet": "^3.13.0",
+    "knex": "^0.15.2",
+    "sqlite3": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kelajatu/db-zoos.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kelajatu/db-zoos/issues"
+  },
+  "homepage": "https://github.com/kelajatu/db-zoos#readme"
 }
