--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "knex": "^0.15.2",
+    "morgan": "^1.9.0",
     "sqlite3": "^4.0.2"
   },
   "devDependencies": {
