--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Lambda School",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "knex": "^0.15.2",
