--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jocafrin/db-zoos.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/jocafrin/db-zoos/issues"
+  },
+  "homepage": "https://github.com/jocafrin/db-zoos#readme"
 }
