--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "relationapimini",
-  "version": "1.0.0",
-  "description": "RDBMS API Mini Sprint",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js"
-  },
-  "author": "Lambda School",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.3",
-    "helmet": "^3.13.0",
-    "knex": "^0.15.2",
-    "sqlite3": "^4.0.2"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.4"
-  }
+	"name": "relationapimini",
+	"version": "1.0.0",
+	"description": "RDBMS API Mini Sprint",
+	"main": "server.js",
+	"scripts": {
+		"start": "nodemon server.js"
+	},
+	"author": "Lambda School",
+	"license": "ISC",
+	"dependencies": {
+		"express": "^4.16.3",
+		"helmet": "^3.13.0",
+		"knex": "^0.15.2",
+		"sqlite3": "^4.0.2"
+	},
+	"devDependencies": {
+		"nodemon": "^1.18.4"
+	}
 }
