--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Lambda School",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "helmet": "^3.13.0"
+    "express": "^4.16.4",
+    "helmet": "^3.14.0",
+    "knex": "^0.15.2",
+    "sqlite3": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
