Added Main Server.js & Imported Dependencies
#Comment

Added main file server.js
Imported the added dependencies

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "relationapimini",
   "version": "1.0.0",
   "description": "RDBMS API Mini Sprint",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "author": "Lambda School",
   "license": "ISC",
