initial commit, added the dependencies needed for project

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Lambda School",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "helmet": "^3.13.0"
+    "express": "^4.16.4",
+    "helmet": "^3.13.0",
+    "knex": "^0.15.2",
+    "sqlite3": "^4.0.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.6"
   }
 }
