Functional, minimal error checking

--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "relationapimini",
+  "name": "knex",
   "version": "1.0.0",
   "description": "RDBMS API Mini Sprint",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
   },
-  "author": "Lambda School",
+  "author": "Chiboba",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "helmet": "^3.13.0"
+    "helmet": "^3.13.0",
+    "knex": "^0.15.2",
+    "sqlite3": "^4.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
-  }
+  },
+  "repository": "https://github.com/Chiboba/db-zoos.git"
 }
