--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RDBMS API Mini Sprint",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon"
   },
   "author": "Lambda School",
   "license": "ISC",
