--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "RDBMS API Mini Sprint",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "server": "nodemon"
   },
+  "keywords": [],
   "author": "Lambda School",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "helmet": "^3.13.0",
+    "express": "^4.16.4",
     "knex": "^0.15.2",
     "sqlite3": "^4.0.4"
   },
