--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "helmet": "^3.13.0",
+    "knex": "^0.15.2",
     "sqlite3": "^4.0.4"
   },
   "devDependencies": {
