--- a/package.json
+++ b/package.json
@@ -4,15 +4,26 @@
   "description": "RDBMS API Mini Sprint",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "server": "nodemon"
   },
   "author": "Lambda School",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "helmet": "^3.13.0"
+    "express": "^4.16.4",
+    "helmet": "^3.13.0",
+    "knex": "^0.15.2",
+    "sqlite3": "^4.0.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
-  }
+    "nodemon": "^1.18.6"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cpoIT/db-zoos.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/cpoIT/db-zoos/issues"
+  },
+  "homepage": "https://github.com/cpoIT/db-zoos#readme"
 }
