fixed files, added knex

--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "RDBMS API Mini Sprint",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "server": "nodemon index.js"
   },
   "author": "Lambda School",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "helmet": "^3.15.0"
+    "helmet": "^3.15.0",
+    "knex": "^0.15.2",
+    "server": "^1.0.18",
+    "sqlite3": "^4.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.6"
