--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fsevents": "^2.0.1",
     "helmet": "^3.15.0",
     "knex": "^0.16.2",
+    "logger": "^0.0.1",
     "sqlite3": "^4.0.4"
   },
   "devDependencies": {
