--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "RDBMS API Mini Sprint",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
   "author": "Lambda School",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
-    "helmet": "^3.15.0"
+    "helmet": "^3.15.0",
+    "knex": "^0.16.2",
+    "morgan": "^1.9.1",
+    "sqlite3": "^4.0.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.6"
-  }
+    "nodemon": "^1.18.9"
+  },
+  "repository": "https://github.com/willieino/db-zoos.git"
 }
