--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "helmet": "^3.15.0"
+    "helmet": "^3.15.0",
+    "knex": "^0.16.2",
+    "scripts": "^0.1.0",
+    "server": "^1.0.18",
+    "sqlite3": "^4.0.4",
+    "start": "^5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.6"
-  }
+    "nodemon": "^1.18.9"
+  },
+  "repository": "https://github.com/techknohauz/db-zoos.git"
 }
