--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "helmet": "^3.15.0",
-    "knex": "^0.16.2"
+    "knex": "^0.16.2",
+    "sqlite3": "^4.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.6"
