--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
 	"author": "Lambda School",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^0.18.0",
 		"express": "^4.16.4",
-		"helmet": "^3.15.0"
+		"helmet": "^3.15.0",
+		"knex": "^0.16.3",
+		"sqlite3": "^4.0.6"
 	},
 	"devDependencies": {
 		"nodemon": "^1.18.9"
