--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 	"dependencies": {
 		"axios": "^0.18.0",
 		"express": "^4.16.4",
-		"helmet": "^3.15.0",
+		"helmet": "^3.15.1",
 		"knex": "^0.16.3",
+		"morgan": "^1.9.1",
 		"sqlite3": "^4.0.6"
 	},
 	"devDependencies": {
