setting up endpoints, added /api/zoos get

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "RDBMS API Mini Sprint",
 	"main": "index.js",
 	"scripts": {
+		"server": "nodemon",
 		"start": "nodemon index.js"
 	},
 	"author": "Lambda School",
