--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "RDBMS API Mini Sprint",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon index.js"
+		"start": "node index.js",
+		"server": "nodemon"
 	},
 	"author": "Lambda School",
 	"license": "ISC",
