--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-	"name": "relationapimini",
-	"version": "1.0.0",
-	"description": "RDBMS API Mini Sprint",
-	"main": "index.js",
-	"scripts": {
-		"start": "nodemon index.js"
-	},
-	"author": "Lambda School",
-	"license": "ISC",
-	"dependencies": {
-		"express": "^4.16.4",
-		"helmet": "^3.15.0"
-	},
-	"devDependencies": {
-		"nodemon": "^1.18.9"
-	}
+  "name": "relationapimini",
+  "version": "1.0.0",
+  "description": "RDBMS API Mini Sprint",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon index.js",
+    "server": "nodemon"
+  },
+  "author": "Lambda School",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.4",
+    "helmet": "^3.15.0",
+    "knex": "^0.16.5",
+    "sqlite3": "^4.0.6"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
+  }
 }
