--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
 	"description": "RDBMS API Mini Sprint",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon index.js"
+		"start": "nodemon index.js",
+		"server": "nodemon"
 	},
 	"author": "Lambda School",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.16.4",
-		"helmet": "^3.15.0"
+		"express": "^4.17.0",
+		"helmet": "^3.18.0",
+		"knex": "^0.16.5",
+		"node": "^12.3.1",
+		"sqlite3": "^4.0.8"
 	},
 	"devDependencies": {
 		"nodemon": "^1.18.9"
