--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "description": "Web DB II Module Challenge",
   "main": "index.js",
-  "scripts": {
-    "server": "nodemon index.js"
+    "scripts": {
+	"start": "node index.js",
+    "server": "nodemon"
   },
   "author": "Lambda School",
   "dependencies": {
     "express": "^4.17.1",
-    "helmet": "^3.18.0"
+    "helmet": "^3.18.0",
+    "knex": "^0.17.3",
+    "sqlite3": "^4.0.8"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
