--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Lambda School",
   "dependencies": {
     "express": "^4.17.1",
-    "helmet": "^3.18.0"
+    "helmet": "^3.18.0",
+    "knx": "^2.3.3",
+    "sqlite3": "^4.0.9"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
