--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Web DB II Module Challenge",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "server": "nodemon index.js"
   },
   "author": "Lambda School",
   "dependencies": {
     "express": "^4.17.1",
     "helmet": "^3.18.0",
+    "knex": "^0.17.6",
     "knx": "^2.3.3",
     "sqlite3": "^4.0.9"
   },
