installs all necessary dependencies

--- a/package.json
+++ b/package.json
@@ -9,5 +9,20 @@
   "author": "Lambda School",
   "devDependencies": {
     "nodemon": "^1.19.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yusufnafey/webdb-ii-challenge.git"
+  },
+  "keywords": [],
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/yusufnafey/webdb-ii-challenge/issues"
+  },
+  "homepage": "https://github.com/yusufnafey/webdb-ii-challenge#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "knex": "^0.19.1",
+    "sqlite3": "^4.0.9"
   }
 }
