--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "expres": "0.0.5",
+    "express": "^4.17.1",
     "knex": "^0.19.2",
     "sqlite3": "^4.1.0"
   }
