--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Web DB II Module Challenge",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon server.js"
   },
   "author": "Lambda School",
   "devDependencies": {
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "knex": "^0.19.2",
     "sqlite3": "^4.1.0"
   }
