--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   "author": "Lambda School",
   "devDependencies": {
     "nodemon": "^1.19.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "knex": "^0.20.1",
+    "sqlite3": "^4.1.0"
   }
 }
