--- a/package.json
+++ b/package.json
@@ -9,5 +9,13 @@
   "author": "Lambda School",
   "devDependencies": {
     "nodemon": "^1.19.2"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
+    "knex-cleaner": "^1.3.0",
+    "sqlite3": "^4.1.0"
   }
 }
