--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "knex": "^0.20.1",
     "knex-cleaner": "^1.3.0",
     "sqlite3": "^4.1.0"
   }
