--- a/package.json
+++ b/package.json
@@ -9,5 +9,13 @@
   "author": "Lambda School",
   "devDependencies": {
     "nodemon": "^1.19.4"
+  },
+  "dependencies": {
+    "arr-diff": "^4.0.0",
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
+    "knex": "^0.20.1",
+    "morgan": "^1.9.1",
+    "sqlite3": "^4.1.0"
   }
 }
