--- a/package.json
+++ b/package.json
@@ -4,10 +4,24 @@
   "description": "Node DB 2 Module Challenge",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "babel-node index.js",
+    "dev": "nodemon index.js --exec babel-node"
   },
   "author": "Lambda School",
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/node": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "knex-cleaner": "^1.3.0",
+    "morgan": "^1.9.1",
     "nodemon": "^1.19.4"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
+    "knex": "^0.20.2",
+    "sqlite3": "^4.1.0"
   }
 }
