--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
-    "knex": "^0.20.8"
+    "knex": "^0.20.8",
+    "sqlite3": "^4.1.1"
   }
 }
