Çreate index.js and server.js and ensure that server is running and api working

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
     "knex": "^0.20.8",
     "sqlite3": "^4.1.1"
   }
