Seeds created and modified get request working displayind Cars db

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Node DB 2 Module Challenge",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "seedit": "knex seed:all"
+
   },
   "author": "Lambda School",
   "devDependencies": {
