--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.20.8",
+    "knex-cleaner": "^1.3.0",
     "sqlite3": "^4.1.1"
   }
 }
