--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     },
     "author": "Lambda School",
     "devDependencies": {
-        "nodemon": "^2.0.2"
+        "nodemon": "^2.0.3"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "helmet": "^3.22.0",
+        "knex": "^0.20.14",
+        "pg": "^8.0.2",
+        "sqlite3": "^4.1.1"
     }
 }
