2- Lots of changes. migration built. I am not get data in postman.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,20 @@
     "description": "Node DB 2 Module Challenge",
     "main": "index.js",
     "scripts": {
-        "server": "nodemon index.js"
+        "server": "nodemon index.js",
+        "start": "node index.js"
     },
     "author": "Lambda School",
     "devDependencies": {
         "nodemon": "^2.0.2"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "helmet": "^3.22.0",
+        "knex": "^0.20.14",
+        "migrations": "^0.1.7",
+        "sqlite3": "^4.1.1"
     }
 }
