--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
     "description": "Node DB 2 Module Challenge",
     "main": "index.js",
     "scripts": {
+        "start": "node index.js",
         "server": "nodemon index.js"
     },
     "author": "Lambda School",
     "devDependencies": {
         "nodemon": "^2.0.2"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "helmet": "^3.22.0",
+        "knex": "^0.20.15",
+        "sqlite3": "^4.1.1"
     }
 }
