--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-    "name": "node-db2-challenge",
-    "version": "1.0.0",
-    "description": "Node DB 2 Module Challenge",
-    "main": "index.js",
-    "scripts": {
-        "server": "nodemon index.js"
-    },
-    "author": "Lambda School",
-    "devDependencies": {
-        "nodemon": "^2.0.2"
-    }
+  "name": "node-db2-challenge",
+  "version": "1.0.0",
+  "description": "Node DB 2 Module Challenge",
+  "main": "index.js",
+  "scripts": {
+    "watch": "nodemon index.js",
+    "start": "node index,js"
+  },
+  "author": "Lambda School",
+  "devDependencies": {
+    "express": "^4.17.1",
+    "knex": "^0.21.0",
+    "nodemon": "^2.0.2",
+    "sqlite": "^4.0.7"
+  }
 }
