Install SQLite3/Build scheme through migrations file

--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "express": "^4.17.1",
     "knex": "^0.21.0",
     "nodemon": "^2.0.2",
-    "sqlite": "^4.0.7"
+    "sqlite3": "^4.1.1"
   }
 }
