setting up first migration...unsure if it is correct bt we shall see.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "nodemon": "^2.0.2"
     },
     "dependencies": {
-        "knex": "^0.21.1"
+        "express": "^4.17.1",
+        "helmet": "^3.22.0",
+        "knex": "^0.21.1",
+        "sqlite3": "^4.2.0"
     }
 }
