--- a/package.json
+++ b/package.json
@@ -9,5 +9,12 @@
     "author": "Lambda School",
     "devDependencies": {
         "nodemon": "^2.0.2"
+    },
+    "dependencies": {
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "knex": "^0.21.1",
+        "pg": "^8.1.0",
+        "sqlite3": "^4.2.0"
     }
 }
