--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
     "author": "Lambda School",
     "devDependencies": {
         "nodemon": "^2.0.2"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "knex": "^0.21.1",
+        "sqlite": "^4.0.7",
+        "sqlite3": "^4.2.0"
     }
 }
