finished setting up DB, ready for APIS

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "nodemon": "^2.0.2"
     },
     "dependencies": {
-        "knex": "^0.21.1"
+        "knex": "^0.21.1",
+        "pg": "^8.2.1"
     }
 }
