MVP + some Extra work

--- a/package.json
+++ b/package.json
@@ -9,5 +9,12 @@
     "author": "Lambda School",
     "devDependencies": {
         "nodemon": "^2.0.2"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "knex": "^0.21.1",
+        "pg": "^8.2.1",
+        "postgres": "^1.0.2",
+        "sqlite3": "^4.2.0"
     }
 }
