--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "node-db2-challenge",
+    "name": "node-db2-project",
     "version": "1.0.0",
-    "description": "Node DB 2 Module Challenge",
+    "description": "Node DB 2 Cars Challenge-DataSchema",
     "main": "index.js",
     "scripts": {
         "server": "nodemon index.js"
@@ -9,5 +9,14 @@
     "author": "Lambda School",
     "devDependencies": {
         "nodemon": "^2.0.2"
-    }
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "helmet": "^3.22.0",
+        "knex": "^0.21.1",
+        "morgan": "^1.10.0",
+        "sqlite3": "^4.2.0"
+    },
+    "repository": "https://github.com/RSibaja88/node-db2-project.git",
+    "license": "MIT"
 }
