--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
     "author": "Lambda School",
     "devDependencies": {
         "nodemon": "^2.0.2"
+    },
+    "dependencies": {
+        "knex": "^0.21.5",
+        "sqlite": "^4.0.14",
+        "sqlite3": "^5.0.0"
     }
 }
