installed sqlite2 and express

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "nodemon": "^2.0.2"
     },
     "dependencies": {
-        "knex": "^0.21.6"
+        "express": "^4.17.1",
+        "knex": "^0.21.6",
+        "sqlite3": "^5.0.0"
     }
 }
