--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "express": "^4.17.1",
+        "helmet": "^4.1.1",
         "knex": "^0.21.6",
         "sqlite3": "^5.0.0"
     }
