added db sql function and a exported module

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "express": "^4.17.1",
         "json": "^10.0.0",
         "knex": "^0.21.12",
+        "morgan": "^1.10.0",
         "sqlite3": "^5.0.0"
     }
 }
