added a knex file, deleted staging and production specs

--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "devDependencies": {
         "eslint": "^7.20.0",
         "nodemon": "^2.0.2"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "knex": "^0.21.17"
     }
 }
