server.js ccomplete

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,15 @@
 {
     "env": {
+        "browser": true,
         "commonjs": true,
-        "es2021": true,
-        "node": true,
-        "jest": true
+        "es2021": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": 12
     },
     "rules": {
+        "semi":0 //semi colon 0- dosent care..1-warning 2-error out
+
     }
 }
