some codes done

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "server": "nodemon index.js",
     "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand"
   },
@@ -16,7 +17,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "knex": "^0.21.17",
+    "helmet": "^4.4.1",
+    "knex": "^0.21.19",
     "sqlite3": "^5.0.2"
   },
   "repository": {
