seperate migration created for optional info

--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "server": "nodemon index.js",
-    "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand"
+    "mup": "npx knex migrate:up",
+    "mdo": "npx knex migrate:down",
+    "mlate": "npx knex migrate:latest",
+    "mroll": "npx knex migrate:rollback"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
@@ -16,6 +20,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "knex": "^0.95.7",
     "sqlite3": "^5.0.2"
   },
