mvp and stretch complete. THIS WAS AN AWESOME ASSIGNMENT

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "knex": "^0.95.7",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "vin-validator": "^1.0.0"
   },
   "repository": {
     "type": "git",
